# job-intel-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/config/: loader.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/llm/: client.py
backend/app/mcp/: __init__.py  errors.py  resources.py  server.py  tools.py
backend/app/models/: __init__.py  job.py
backend/app/schemas/: job.py
backend/app/scoring/: matcher.py
backend/app/scrapers/: ats_adapters.py  base.py  filters.py  generic_playwright_adapter.py  jobspy_adapter.py  platform_adapters.py  static_html_adapter.py
backend/app/search/: __init__.py  query_builder.py
backend/app/services/: ingestion.py  semantic.py  sources.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_ingestion.py  test_mcp_tools.py  test_query_builder.py  test_scoring.py  test_scraper_mock.py
config/: job_platforms.yaml  profile.yaml  saved_searches.yaml  search_profile.yaml  sources.yaml
docs/: architecture.md  development.md  limitations.md  mcp.md  scoring.md  sources.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: BrowserAssistant.tsx  Dashboard.tsx  Jobs.tsx  ManualCapture.tsx  SearchStrategy.tsx  Settings.tsx  Sources.tsx
frontend/src/types/: index.ts
worker/: Dockerfile
worker/app/: scheduler.py  worker.py
